Changes to footer, hover anchors, alignment of pricing box, fixed play video button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,15 +53,21 @@ footer a {
   width: 50px;
   margin: 10px;
 }
-.section {
+.section1 {
   text-align: center;
   padding: 60px 20px;
 }
-.section p {
+.section2 p {
   color: #677788;
 }
-.section h2 {
+.section2 h2 {
   font-size: 28px;
+}
+.pricing-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
 }
 .features-grid {
   display: flex;
@@ -102,10 +108,13 @@ footer a {
 }
 .form-container {
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   padding: 30px 25px;
   border-radius: 12px;
   max-width: 400px;
-  width: 100%;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
@@ -118,6 +127,7 @@ footer a {
 .form-row {
   display: flex;
   gap: 10px;
+  flex-direction: space-evenly;
 }
 
 input,
@@ -249,7 +259,8 @@ footer div {
   width: 6rem;
 }
 .footer-logo {
-  width: 4rem;
+  width: 6rem;
+  padding: 0;
 }
 
 .features-grid {
@@ -263,6 +274,10 @@ footer div {
 .company-footer {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  padding: 20px;
+  max-width: 800px;
 }
 
 .actions {
@@ -283,4 +298,23 @@ footer div {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
+}
+
+.footer {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.address {
+  color: #677788;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+a:hover {
+  color: hotpink;
 }
